--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,2 @@
-<p>footer works!</p>
+<footer class="bg-black text-white px-4 py-2 flex justify-center items-center h-45 text-sm">
+©Copyright 2024</footer>
