--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,6 +5,8 @@
       <img src="/assets/imgs/balon3.jpg" class="h-10 rounded-full" alt="Balon3 Logo">
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bal&oacute;n 3</span>
     </a>
+
+    <!--
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       <button id="btn-navbar"  data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Menu</span>
@@ -14,18 +16,21 @@
       </button>
     </div>
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-      <ul class="bg-black text-white text-opacity-90 hover:text-gradient-white-transparent flex flex-col md:flex-row md:space-x-8 rtl:space-x-reverse p-4 md:p-0 font-medium md:mt-0 rounded-lg border border-gray-100 md:border-0 transition-all duration-300 ease-in-out">
+      <ul class="h-5  bg-black text-white text-opacity-90 hover:text-gradient-white-transparent flex flex-col md:flex-row md:space-x-8 rtl:space-x-reverse p-4 md:p-0 font-medium md:mt-0 rounded-lg border border-gray-100 md:border-0 transition-all duration-300 ease-in-out">
         <li>
-          <a href="#" class="block py-2 px-3 text-white hover:text-black  hover:bg-gray-100 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500">Partidos</a>
+          <a href="#" class="block px-rounded rounded hover:text-black hover:bg-gray-100   md:p-0 md:dark:text-midnight-500  dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Partidos</a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3rounded hover:text-black  hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">En vivo</a>
+          <a href="#" class="block px-3rounded rounded hover:text-black  hover:bg-gray-100  md:p-0 md:dark:hover:text-midnight-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">En vivo</a>
         </li>
-
       <li>
-        <a href="#" class="block py-2 px-3rounded hover:text-black  hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Ligas</a>
+        <a href="#" class="block px-3rounded rounded hover:text-black  hover:bg-gray-100  md:p-0 md:dark:hover:text-midnight-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Ligas</a>
       </li>
     </ul>
   </div>
-  </div>
+  -->
+
+</div>
+
+
 </nav>
