--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,26 +1,31 @@
-.file-list{
+/*-->MAIN<--*/
+.main{
   margin-top: 70px;
   padding: 10px;
   background-color: #EEEEEE;
   display: flex;
   flex-wrap: wrap;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 70px);
   overflow-y: scroll;
 }
 
 
-.file-list::-webkit-scrollbar {
-  width: 8px; /* Set the width of the scrollbar */
+.main::-webkit-scrollbar {
+  width: 8px;
 }
 
-.file-list::-webkit-scrollbar-thumb {
-  background-color: black; /* Set the color of the thumb (the moving part) */
-  border-radius: 6px; /* Set the border radius of the thumb */
+.main::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 6px;
 }
 
-.file-list::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Set the color of the track (the non-moving part) */
+.main::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
+/*-----------*/
+
+
+/*-->CARDS<--*/
 .card-football{
 margin: 5px;
 }
@@ -28,5 +33,14 @@ margin: 5px;
 .card-football img{
   width: 100%;
   height: 200px;
-  }
+}
+/*-----------*/
 
+
+/*-->PAGINATOR<--*/
+app-paginator{
+  margin-left:auto;
+  padding:5px 5px 0;
+}
+
+/*-----------*/
