paginator + request post

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,7 @@
        }
     </div>
 
-  <app-paginator [data]="this.paginationData"></app-paginator>
+  <app-paginator [data]="this.paginationData" (pageChanged)="onPageChange($event)"></app-paginator>
 </div>
 
 
