--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<router-outlet></router-outlet>
-
+<app-header></app-header>
+<div class="main">
+  <router-outlet></router-outlet>
+</div>
+<!--<app-footer></app-footer>-->
 
 
 
