--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,50 @@
 body{
   overflow: hidden;
 }
+
+/*-->MAIN<--*/
+.main{
+  margin-top: 70px;
+  padding: 10px;
+  background-color: #EEEEEE;
+  display: flex;
+  flex-wrap: wrap;
+  height: calc(100vh - 70px);
+  overflow-y: scroll;
+}
+
+
+.main::-webkit-scrollbar {
+  width: 8px;
+}
+
+.main::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 6px;
+}
+
+.main::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+/*-----------*/
+
+
+/*-->CARDS<--*/
+.card-football{
+margin: 5px;
+}
+
+.card-football img{
+  width: 100%;
+  height: 240px;
+}
+/*-----------*/
+
+
+/*-->PAGINATOR<--*/
+app-paginator{
+  margin-left:auto;
+  padding:5px 5px 0;
+}
+
+/*-----------*/
