--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,9 @@
 
 <!--<div class="main-container" @listAnimations >-->
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-2">
     @for (card of cards; track card.id) {
-        <a  href="#" class="card-football flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow xl:flex-row  hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+        <a (click)="onCardClick(card.id)" class="card-football flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow xl:flex-row  hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
           <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="{{card.imageUrl}}" alt="">
           <div class="flex flex-col justify-between p-4 leading-normal">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white ">{{card.title}}</h5>
