--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
           <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="{{card.imageUrl}}" alt="">
           <div class="flex flex-col justify-between p-4 leading-normal">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white ">{{card.title}}</h5>
-              <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{card.content}}</p>
+             <!-- <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{card.content}}</p> -->
           </div>
         </a>
        }
