--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<div class="main">
+<section class="main mx-auto w-full">
   <router-outlet></router-outlet>
-</div>
+</section>
 <!--<app-footer></app-footer>-->
 
 
