--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,41 @@
+<section class="home-container text-gray-600 body-font">
+  <div class="container px-2  mx-auto w-full">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+      @for (card of cards; track card.id) {
+        <div class="p-4">
+          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+            <img class="lg:h-36 md:h-36 w-full object-cover object-center" src="{{card.imageUrl}}" alt="">
+            <div class="p-6">
+              <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">LIGA ARGENTINA</h2>
+              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{card.title}}</h1>
+              <!-- <p class="leading-relaxed mb-3">{{card.content}}</p> -->
+              <div class="flex items-center flex-wrap">
+                <a (click)="onCardClick(card.id)" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0 cursor-pointer">Ver más
+                  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14"></path>
+                    <path d="M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
 
+                <span class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>1.2K
+                </span>
+                <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>6
+                </span>
 
-
-<!--<div class="main-container" @listAnimations >-->
-
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-2">
-    @for (card of cards; track card.id) {
-        <a (click)="onCardClick(card.id)" class="card-football flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow xl:flex-row  hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-          <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="{{card.imageUrl}}" alt="">
-          <div class="flex flex-col justify-between p-4 leading-normal">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white ">{{card.title}}</h5>
-             <!-- <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{card.content}}</p> -->
+              </div>
+            </div>
           </div>
-        </a>
-       }
+        </div>
+      }
     </div>
+  </div>
+</section>
 
-  <app-paginator [data]="this.paginationData" (pageChanged)="onPageChange($event)"></app-paginator>
-
-
-
-
-
-
-
-
+<app-paginator [data]="this.paginationData" (pageChanged)="onPageChange($event)"></app-paginator>
