--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
 
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a (click)="home()" class="nav-hover flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/assets/imgs/balon3.jpg" class="h-10" alt="Balon3 Logo">
+      <img src="./assets/imgs/balon3.jpg" class="h-10" alt="Balon3 Logo">
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bal&oacute;n 3</span>
     </a>
    </div>
